# sensor-monitor

./: .gitignore  .gitignore.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fix_file_headers.fish  fix_stuff1.diff  pyproject.toml  recover_and_fix.py
.github/: FUNDING.yml
.zed/: settings.json
scripts/: activate_fish.fish  install.sh
sensor_monitor/: __init__.py  __main__.py
sensor_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sensor_monitor/cli/: __init__.py  main.py
sensor_monitor/companion/: __init__.py  client.py
sensor_monitor/core/: __init__.py  config.py  discovery.py  monitor.py
sensor_monitor/sources/: __init__.py  amd.py  base.py  cpu_sysfs.py  disk.py  lmsensors.py  nvidia.py  nvme.py  procstat.py
sensor_monitor/tui/: __init__.py  discovery_tui.py
sensor_monitor/utils/: __init__.py  alerts.py  config.py  daemon.py  helpers.py  logging.py
tests/: conftest.py  test_alerts.py  test_companion.py  test_config.py  test_discovery.py  test_helpers.py  test_monitor.py  test_parsers.py  test_sources.py
