[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor_monitor"
version = "2.0.0"
description = "Monitor system sensors and push to Bitfocus Companion custom variables"
readme = "README.md"
authors = [{name = "Sensor Monitor Team"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=5.4",
    "textual>=0.41",
    "requests>=2.25",
]
[project.optional-dependencies]
sensors = ["libsensors>=0.0.4"]
dev = ["pytest>=7.0", "pytest-cov", "black", "mypy"]

[project.scripts]
sensor-monitor = "sensor_monitor.cli.main:main"
sensor-discovery = "sensor_monitor.cli.discovery:main"
sensor-discovery-tui = "sensor_monitor.tui.discovery_tui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sensor_monitor*"]
exclude = ["tests*", "scripts*"]